# BooksAPI

./: .pre-commit-config.yaml  README.md  app.db  pyproject.toml
meu-projeto/: .pre-commit-config.yaml  pyproject.toml
src/app/: __init__.py  main.py
src/app/models/: usuario.py
src/app/modules/books/: __init__.py  books_controller.py  books_service.py
src/app/modules/books/dto/: books_dto.py
src/app/modules/categories/: categories_controller.py  categories_service.py
src/app/modules/health/: __init__.py  health_controller.py  health_service.py
src/app/modules/health/dto/: health_dto.py
src/app/modules/usuario/: __init__.py  usuario_controller.py  usuario_service.py
src/app/modules/usuario/dto/: usuario_dto.py
src/app/shared/database/: connection.py
src/app/shared/database/models/: books.py
src/data/raw/books/: Books_books.csv  books.csv
src/models/: books.py  usuario.py
src/scripts/Data_scrap/: BookScrap.py
src/scripts/book_csv_to_db/: csv_to_db.py
src/shared/database/: connection.py
tests/: test_books_service.py
